# Frp-network-evaluation

./: .dockerignore  .env.example  .gitignore  DESIGN.json  DESIGN.md  Dockerfile  PRODUCT.md  README.md  docker-compose.staging.yml  docker-compose.yml  main.py  requirements.txt
agents/: __init__.py  agent_client.py  agent_relay.py  agent_server.py  launchd.py  launchd_control_bridge.py  service.py
clients/windows/: Cargo.toml  README-WINDOWS.md
clients/windows/apps/tray/src-tauri/: Cargo.toml  tauri.conf.json
clients/windows/apps/tray/src-tauri/src/: main.rs
clients/windows/apps/tray/ui/: app.js  index.html
clients/windows/crates/client-core/: Cargo.toml
clients/windows/crates/client-core/src/: config.rs  diagnostics.rs  firewall.rs  ipc.rs  lib.rs  paths.rs  process_spec.rs  service_plan.rs
clients/windows/crates/mc-netprobe-elevate/: Cargo.toml
clients/windows/crates/mc-netprobe-elevate/src/: main.rs
clients/windows/crates/mc-netprobe-service/: Cargo.toml
clients/windows/crates/mc-netprobe-service/src/: control.rs  main.rs  supervisor.rs
clients/windows/scripts/: package-windows-client.ps1  validate-windows-client.ps1
clients/windows/templates/: client-app.yaml  client.yaml
config/: scenarios.example.yaml  thresholds.example.yaml  topology.example.yaml
controller/: agent_http_client.py  build_info.py  control_bridge.py  control_bridge_client.py  login_template.html  orchestrator.py  panel_models.py  panel_orchestrator.py  panel_store.py  path_registry.py  pipeline.py  public_webui_template.html  quickstart.py  scenario.py  scheduler.py  ssh_exec.py  staging_seed.py  webui.py  webui_template.html
docker/: entrypoint-webui.sh  relay-agent.compose.yml
docs/: HANDOFF-LINUX.md  HANDOFF-MACOS-BRANCH.md  INITIAL-LAUNCH-BLOG.md  STAGING-PANEL-DEBUG.md
exporters/: csv_exporter.py  html_report.py  json_exporter.py
frontend/: .gitignore  eslint.config.js  (+7 more)
(+73 files in other folders)
