[package]
name = "mc-netprobe-service"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
mc-netprobe-client-core = { path = "../client-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Pipes", "Win32_System_Threading"] }
